--- a/content/about.html
+++ b/content/about.html
@@ -103,7 +103,7 @@ summary {
 
 
 
-
+<!-- tabsets -->
 
 <style type="text/css">
 .tabset-dropdown > .nav-tabs {
@@ -159,7 +159,7 @@ summary {
 }
 </style>
 
-
+<!-- code folding -->
 
 
 
@@ -213,7 +213,7 @@ summary {
 
 <script>
 
-
+// add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
   $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
 }
@@ -224,7 +224,7 @@ $(document).ready(function () {
 
 </script>
 
-
+<!-- tabsets -->
 
 <script>
 $(document).ready(function () {
@@ -238,10 +238,10 @@ $(document).ready(function () {
 });
 </script>
 
+<!-- code folding -->
 
 
-
-
+<!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
   (function () {
     var script = document.createElement("script");
