--- a/content/about.html
+++ b/content/about.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Savvy" />
+<meta name="author" content="Savithri Rajaraman" />
 
 <meta name="date" content="2014-04-09" />
 
