--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Savvy Blogs</title>
+	<title>Savvy Data Science Blog</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="Savvy Blogs">
-	<meta property="og:title" content="Savvy Blogs" />
+	<meta property="og:title" content="Savvy Data Science Blog" />
 <meta property="og:description" content="Savvy Blogs" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" />
@@ -18,7 +18,7 @@
 	
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
-	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Savvy Blogs">
+	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Savvy Data Science Blog">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
 	<link rel="stylesheet" href="/css/style.css">
 	
@@ -30,8 +30,8 @@
 		<header class="header">
 	<div class="container">
 		<div class="logo">
-			<a class="logo__link" href="/" title="Savvy Blogs" rel="home">
-				<div class="logo__title">Savvy Blogs</div>
+			<a class="logo__link" href="/" title="Savvy Data Science Blog" rel="home">
+				<div class="logo__title">Savvy Data Science Blog</div>
 				<div class="logo__tagline">Data Science Blog</div>
 			</a>
 		</div>
@@ -286,7 +286,7 @@ similarities in Go templates.</p>
 	<div class="container footer__container flex">
 		
 		<div class="footer__copyright">
-			&copy; 2019 Savvy Blogs.
+			&copy; 2019 Savvy Data Science Blog.
 			<span class="footer__copyright-credits">Generated with <a href="https://gohugo.io/" rel="nofollow noopener" target="_blank">Hugo</a> and <a href="https://github.com/Vimux/Mainroad/" rel="nofollow noopener" target="_blank">Mainroad</a> theme.</span>
 		</div>
 	</div>
