--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>404 Page not found - Savvy Data Science Blog</title>
+	<title>404 Page not found - Savvy Data Science</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
 	<meta property="og:title" content="404 Page not found" />
@@ -27,9 +27,9 @@
 		<header class="header">
 	<div class="container">
 		<div class="logo">
-			<a class="logo__link" href="/" title="Savvy Data Science Blog" rel="home">
-				<div class="logo__title">Savvy Data Science Blog</div>
-				<div class="logo__tagline">Data Science Blog</div>
+			<a class="logo__link" href="/" title="Savvy Data Science" rel="home">
+				<div class="logo__title">Savvy Data Science</div>
+				<div class="logo__tagline">Data Science - Keeping it simple</div>
 			</a>
 		</div>
 		
@@ -125,7 +125,7 @@
 	<div class="container footer__container flex">
 		
 		<div class="footer__copyright">
-			&copy; 2019 Savvy Data Science Blog.
+			&copy; 2019 Savvy Data Science.
 			<span class="footer__copyright-credits">Generated with <a href="https://gohugo.io/" rel="nofollow noopener" target="_blank">Hugo</a> and <a href="https://github.com/Vimux/Mainroad/" rel="nofollow noopener" target="_blank">Mainroad</a> theme.</span>
 		</div>
 	</div>
